# montecarlosimulator

./: .gitignore  README.md  pyproject.toml  requirements.txt  scratch.ipynb  setup.cfg  tox.ini
montecarlosimulator/: Exceptions.py  __init__.py  data_structures.py  dispersions.py  monte_carlo_simulator.py  monte_carlo_simulator.pyi  monte_carlo_visualizer.py
montecarlosimulator/test/: conftest.py  monte_carlo_simulator_fixtures.py  monte_carlo_visualizer_test.py  test_classes.py  test_monte_carlo_simulator.py
