[metadata]
name = monte-carlo-simulator
version = 0.0.1
description = Utilities to run Monte Carlo simulations
platforms=unix, linux, osx, cygwin, win32, win64
author = Paolo Caputo
author_email = paolcaputo@gmail.com
url = https://github.com/paolzpk/montecarlosimulator

[options]
packages = find:
python_requires = >=3.8
package_dir = =montecarlosimulator

[options.packages.find]
where = montecarlosimulator
exclude = test*
